--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                     </div>
             </div>
             <div>
-                <h3>GUEST</h3>
+                <h3>AWAY</h3>
                  <div class="scorecard" id="guest-points">0</div>
                     <div class="btns">
                         <button id="one" onclick="plusOne()">+1</button>
